# bifrost

./: .gitignore  Brewfile  README.md  bootstrap.sh  config.example.toml  pyproject.toml
bifrost/: __main__.py  blocklist.py  cli.py  config.py  connections.py  direct.py  display.py  prober.py  stats.py  vpn.py
bifrost/scripts/: down.sh  up.sh
